[tool.poetry]
name = "sqlmodel-crud"
version = "0.1.0"
description = ""
authors = ["Suhail <47333432+SuhailArshad1122@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
